snapshot2.css
#_magnify_scope{
    position: fixed;
    top: 0;
    left: 0;
    margin: 0;
    padding: 0;
    width: 100vw;
    height: 100vh;
    overflow: hidden;

}

#_bottom_layer{
    position: absolute;
    border-radius: 100%;
    /*hide the glass by default*/
    display: none;
    /*hide the cursor*/
    cursor: none;
}

